--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-loading-skeleton-menu": "^0.1.2",
     "react-router-dom": "^7.1.5",
     "react-spinners": "^0.15.0"
   },
